Correct hotizontal overflow by resettin margin and padding to the entire document.

--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  margin:0;
+  padding: 0;
 }
 
 body {
@@ -9,7 +11,6 @@ body {
 }
 
 body header {
-  min-width: 100%;
   align-items: center;
 }
 
